--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,32 +1,105 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
+# Additional translations at https://github.com/heartcombo/devise/wiki/I18n
 
 en:
+  user_mailer:
+    confirmation_instructions:
+      confirm_link_msg: 'You can confirm your account email through the link below:'
+      confirm_account_link: 'Confirm my account'
+    reset_password_instructions:
+      request_reset_link_msg: 'Someone has requested a token to change your password. You can reset your password by inputting the token below into the YOUbit app.'
+      password_change_msg: 'Your password reset token is here'
+      ignore_mail_msg: "If you didn't request this, please ignore this email."
+      no_changes_msg: "Your password won't change until you use the token above and create a new one."
+    unlock_instructions:
+      account_lock_msg: 'Your account has been locked due to an excessive number of unsuccessful sign in attempts.'
+    welcome_email:
+      welcome_msg: 'Welcome to the Habit Tracker YOUbit,'
+      successful_sign_up_msg: 'You have successfully signed up, your username is:'
+      login_url_msg: 'To login to the site, just follow this link:'
+      thank_you_msg: 'Thanks for joining and have a great day!'
+  devise:
+    confirmations:
+      confirmed: 'Your email address has been successfully confirmed.'
+      send_instructions: 'You will receive an email with instructions for how to confirm your email address in a few minutes.'
+      send_paranoid_instructions: 'If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes.'
+    failure:
+      already_authenticated: 'You are already signed in.'
+      inactive: 'Your account is not activated yet.'
+      invalid: 'Invalid %{authentication_keys} or password.'
+      locked: 'Your account is locked.'
+      last_attempt: 'You have one more attempt before your account is locked.'
+      not_found_in_database: 'Invalid %{authentication_keys} or password.'
+      timeout: 'Your session expired. Please sign in again to continue.'
+      unauthenticated: 'You need to sign in or sign up before continuing.'
+      unconfirmed: 'You have to confirm your email address before continuing.'
+    mailer:
+      confirmation_instructions:
+        subject: 'Confirmation instructions'
+      reset_password_instructions:
+        subject: 'Reset password instructions'
+      unlock_instructions:
+        subject: 'Unlock instructions'
+      email_changed:
+        subject: 'Email Changed'
+      password_change:
+        subject: 'Password Changed'
+    omniauth_callbacks:
+      failure: 'Could not authenticate you from %{kind} because "%{reason}".'
+      success: 'Successfully authenticated from %{kind} account.'
+    passwords:
+      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
+      send_instructions: 'You will receive an email with instructions on how to reset your password in a few minutes.'
+      send_paranoid_instructions: 'If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes.'
+      updated: 'Your password has been changed successfully. You are now signed in.'
+      updated_not_active: 'Your password has been changed successfully.'
+    registrations:
+      destroyed: 'Bye! Your account has been successfully cancelled. We hope to see you again soon.'
+      signed_up: 'Welcome! You have signed up successfully.'
+      signed_up_but_inactive: 'You have signed up successfully. However, we could not sign you in because your account is not yet activated.'
+      signed_up_but_locked: 'You have signed up successfully. However, we could not sign you in because your account is locked.'
+      signed_up_but_unconfirmed: 'A message with a confirmation link has been sent to your email address. Please follow the link to activate your account.'
+      update_needs_confirmation: 'You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address.'
+      updated: 'Your account has been updated successfully.'
+      updated_but_not_signed_in: 'Your account has been updated successfully, but since your password was changed, you need to sign in again'
+    sessions:
+      signed_in: 'Signed in successfully.'
+      signed_out: 'Signed out successfully.'
+      already_signed_out: 'Signed out successfully.'
+    unlocks:
+      send_instructions: 'You will receive an email with instructions for how to unlock your account in a few minutes.'
+      send_paranoid_instructions: 'If your account exists, you will receive an email with instructions for how to unlock it in a few minutes.'
+      unlocked: 'Your account has been unlocked successfully. Please sign in to continue.'
+  errors:
+    messages:
+      already_confirmed: 'was already confirmed, please try signing in'
+      confirmation_period_expired: 'needs to be confirmed within %{period}, please request a new one'
+      expired: 'has expired, please request a new one'
+      not_found: 'not found'
+      not_locked: 'was not locked'
+      not_saved:
+        one: '1 error prohibited this %{resource} from being saved:'
+        other: '%{count} errors prohibited this %{resource} from being saved:'
+  graphql_devise:
+    registration_failed: "User couldn't be registered"
+    resource_build_failed: "Resource couldn't be built, execution stopped."
+    not_authenticated: 'User is not logged in.'
+    user_not_found: 'User was not found or was not logged in.'
+    invalid_resource: 'Errors present in the resource.'
+    registrations:
+      missing_confirm_redirect_url: "Missing 'confirm_success_url' parameter. Required when confirmable module is enabled."
+      redirect_url_not_allowed: "Redirect to '%{redirect_url}' not allowed."
+    passwords:
+      update_password_error: 'Unable to update user password'
+      missing_passwords: "You must fill out the fields labeled 'Password' and 'Password confirmation'."
+      password_not_required: "This account does not require a password. Sign in using your '%{provider}' account instead."
+      reset_token_not_found: 'No user found for the specified reset token.'
+      reset_token_expired: 'Reset password token is no longer valid.'
+      send_instructions: 'You will receive an email with instructions on how to reset your password in a few minutes.'
+    sessions:
+      bad_credentials: 'Invalid login credentials. Please try again.'
+      not_confirmed: "A confirmation email was sent to your account at '%{email}'. You must follow the instructions in the email before your account can be activated"
+    confirmations:
+      already_confirmed: 'Email was already confirmed, please try signing in'
+      invalid_token: 'Invalid confirmation token. Please try again'
+      user_not_found: "Unable to find user with email '%{email}'."
+      send_instructions: 'You will receive an email with instructions for how to confirm your email address in a few minutes.'
