--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,9 +100,10 @@ en:
       bad_password: 'Incorrect password provided. Please try again.'
       not_confirmed: "A confirmation email was sent to your account at '%{email}'. You must follow the instructions in the email before your account can be activated"
     errors:
-      bad_password: { "password": ['is incorrect'] }
-      bad_email: { "email": ['does not exist'] }
-      bad_id: { "id": ['is invalid'] }
+      bad_password: { "password": [ 'is incorrect' ] }
+      bad_email: { "email": [ 'does not exist' ] }
+      bad_id: { "id": [ 'is invalid' ] }
+      bad_token: { "token": [ 'is invalid' ] }
     confirmations:
       already_confirmed: 'Email was already confirmed, please try signing in'
       invalid_token: 'Invalid confirmation token. Please try again'
